--- a/src/app/administracion-centro/configuracion/modal-parametros-centro/components/horarios-centro/centros-medicos-horarios.component.html
+++ b/src/app/administracion-centro/configuracion/modal-parametros-centro/components/horarios-centro/centros-medicos-horarios.component.html
@@ -65,35 +65,35 @@
         <mat-form-field appearance="outline" class="col-9 col-lg-5">
           <mat-label>Hora de Apertura</mat-label>
           <input type="time" matInput placeholder="08:00 AM" formControlName="hora_apertura" required/>
-          <mat-error *ngIf="this.formControl().hora_apertura.hasError('required')">Campo hora de Apertura es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['hora_apertura'].hasError('required')">Campo hora de Apertura es requerido.</mat-error>
         </mat-form-field>
 
         <div class="col-3 col-lg-1 text-center">A</div>
         <mat-form-field appearance="outline" class="col-9 col-lg-5">
           <mat-label>Hora de Cierre</mat-label>
           <input type="time" matInput placeholder="12:00 M" formControlName="hora_cierre" required/>
-          <mat-error *ngIf="this.formControl().hora_cierre.hasError('required')">Campo hora de Cierre es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['hora_cierre'].hasError('required')">Campo hora de Cierre es requerido.</mat-error>
         </mat-form-field>
         <mat-divider></mat-divider>
       </div>
       
       <div class="mt-3 row">
-        <mat-checkbox formControlName="intervaloReceso" class="h3">{{this.formControl().intervaloReceso.value ? 'Intervalo de descanso' : 'Sin descanso'}}</mat-checkbox>
+        <mat-checkbox formControlName="intervaloReceso" class="h3">{{this.formControl()['intervaloReceso'].value ? 'Intervalo de descanso' : 'Sin descanso'}}</mat-checkbox>
       </div>
 
-      <div class="mt-1 row align-items-center" *ngIf="this.formControl().intervaloReceso.value">
+      <div class="mt-1 row align-items-center" *ngIf="this.formControl()['intervaloReceso'].value">
         <div class="col-3 col-lg-1 text-center">De</div>
         <mat-form-field appearance="outline" class="col-9 col-lg-5">
           <mat-label>Hora descanso Inicial</mat-label>
           <input type="time" matInput placeholder="08:00 AM" formControlName="hora_descanso_inicial"/>
-          <mat-error *ngIf="this.formControl().hora_descanso_inicial.hasError('required')">Campo hora descanso inicial es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['hora_descanso_inicial'].hasError('required')">Campo hora descanso inicial es requerido.</mat-error>
         </mat-form-field>
 
         <div class="col-3 col-lg-1 text-center">A</div>
         <mat-form-field appearance="outline" class="col-9 col-lg-5">
           <mat-label>Hora descanso Final</mat-label>
           <input type="time" matInput placeholder="12:00 M" formControlName="hora_descanso_final"/>
-          <mat-error *ngIf="this.formControl().hora_descanso_final.hasError('required')">Campo hora descanso final es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['hora_descanso_final'].hasError('required')">Campo hora descanso final es requerido.</mat-error>
         </mat-form-field>
       </div>
 
