--- a/src/app/admin/parametros/pacientes/pacientes.component.html
+++ b/src/app/admin/parametros/pacientes/pacientes.component.html
@@ -64,7 +64,7 @@
           >
         </mat-select>
         <mat-error
-          *ngIf="this.formControl().utilidad_tipo_identificacion_id.hasError('required')"
+          *ngIf="this.formControl()['utilidad_tipo_identificacion_id'].hasError('required')"
           >Campo tipo de doc. es requerido.</mat-error
         >
       </mat-form-field>
@@ -77,7 +77,7 @@
         />
         <mat-icon matSuffix>numbers</mat-icon>
         <mat-error
-          *ngIf="this.formControl().numero_identificacion.hasError('required')"
+          *ngIf="this.formControl()['numero_identificacion'].hasError('required')"
           >Campo numero de ident. es requerido.</mat-error
         >
       </mat-form-field>
@@ -89,7 +89,7 @@
           formControlName="primer_nombre"
         />
         <mat-icon matSuffix>person</mat-icon>
-        <mat-error *ngIf="this.formControl().primer_nombre.hasError('required')"
+        <mat-error *ngIf="this.formControl()['primer_nombre'].hasError('required')"
           >Campo primer nombre es requerido.</mat-error
         >
       </mat-form-field>
@@ -102,7 +102,7 @@
         />
         <mat-icon matSuffix>person</mat-icon>
         <mat-error
-          *ngIf="this.formControl().segundo_nombre.hasError('required')"
+          *ngIf="this.formControl()['segundo_nombre'].hasError('required')"
           >Campo segundo nombre es requerido.</mat-error
         >
       </mat-form-field>
@@ -115,7 +115,7 @@
         />
         <mat-icon matSuffix>person</mat-icon>
         <mat-error
-          *ngIf="this.formControl().primer_apellido.hasError('required')"
+          *ngIf="this.formControl()['primer_apellido'].hasError('required')"
           >Campo primer apellido es requerido.</mat-error
         >
       </mat-form-field>
@@ -128,7 +128,7 @@
         />
         <mat-icon matSuffix>person</mat-icon>
         <mat-error
-          *ngIf="this.formControl().segundo_apellido.hasError('required')"
+          *ngIf="this.formControl()['segundo_apellido'].hasError('required')"
           >Campo segundo apellido es requerido.</mat-error
         >
       </mat-form-field>
@@ -142,7 +142,7 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
         <mat-error
-          *ngIf="this.formControl().fecha_nacimiento.hasError('required')"
+          *ngIf="this.formControl()['fecha_nacimiento'].hasError('required')"
           >Campo fecha de nac. es requerido.</mat-error
         >
       </mat-form-field>
@@ -150,12 +150,12 @@
         <mat-label>Sexo</mat-label>
         <mat-select formControlName="sexo">
           <mat-select-trigger>
-            {{formControl().sexo.value}}
+            {{formControl()['sexo'].value}}
           </mat-select-trigger>
           <mat-option value="M"><mat-icon>boy</mat-icon>Masculino</mat-option>
           <mat-option value="F"><mat-icon>girl</mat-icon>Femenino</mat-option>
         </mat-select>
-        <mat-error *ngIf="this.formControl().sexo.hasError('required')">Campo sexo es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['sexo'].hasError('required')">Campo sexo es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Departamento</mat-label>
@@ -168,7 +168,7 @@
           >
         </mat-select>
         <mat-error
-          *ngIf="this.formControl().departamento_id.hasError('required')"
+          *ngIf="this.formControl()['departamento_id'].hasError('required')"
           >Campo departamento es requerido.</mat-error
         >
       </mat-form-field>
@@ -182,7 +182,7 @@
             >{{ ciudades.nombre }}</mat-option
           >
         </mat-select>
-        <mat-error *ngIf="this.formControl().ciudad_id.hasError('required')"
+        <mat-error *ngIf="this.formControl()['ciudad_id'].hasError('required')"
           >Campo ciudad es requerido.</mat-error
         >
       </mat-form-field>
@@ -190,7 +190,7 @@
         <mat-label>Dirección</mat-label>
         <input matInput placeholder="Escribir..." formControlName="direccion" />
         <mat-icon matSuffix>fmd_good</mat-icon>
-        <mat-error *ngIf="this.formControl().direccion.hasError('required')"
+        <mat-error *ngIf="this.formControl()['direccion'].hasError('required')"
           >Campo dirección es requerido.</mat-error
         >
       </mat-form-field>
@@ -199,13 +199,13 @@
         <input matInput placeholder="Escribir..." formControlName="barrio" />
         <mat-icon matSuffix>my_location</mat-icon>
         <mat-error
-          *ngIf="this.formControl().barrio.hasError('required')">Campo barrio nombre es requerido.</mat-error>
+          *ngIf="this.formControl()['barrio'].hasError('required')">Campo barrio nombre es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Telefono</mat-label>
         <input matInput placeholder="Escribir..." formControlName="telefono" />
         <mat-icon matSuffix>phone</mat-icon>
-        <mat-error *ngIf="this.formControl().telefono.hasError('required')"
+        <mat-error *ngIf="this.formControl()['telefono'].hasError('required')"
           >Campo telefono es requerido.</mat-error
         >
       </mat-form-field>
@@ -213,7 +213,7 @@
         <mat-label>Correo Electrónico</mat-label>
         <input matInput placeholder="Escribir..." formControlName="correo" />
         <mat-icon matSuffix>mail_outline</mat-icon>
-        <mat-error *ngIf="this.formControl().correo.hasError('required')"
+        <mat-error *ngIf="this.formControl()['correo'].hasError('required')"
           >Campo correo es requerido.</mat-error
         >
       </mat-form-field>
@@ -223,34 +223,34 @@
         <input matInput placeholder="Escribir..." formControlName="estado_civil" />
         <mat-icon matSuffix>people_alt</mat-icon>
         <mat-error
-          *ngIf="this.formControl().estado_civil.hasError('required')">Campo estado civil nombre es requerido.</mat-error>
+          *ngIf="this.formControl()['estado_civil'].hasError('required')">Campo estado civil nombre es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Grupo sanguineo</mat-label>
         <input matInput placeholder="Escribir..." formControlName="grupo_sanguineo" />
         <mat-icon matSuffix>bloodtype</mat-icon>
-        <mat-error *ngIf="this.formControl().grupo_sanguineo.hasError('required')">Campo Grupo sanguineo nombre es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['grupo_sanguineo'].hasError('required')">Campo Grupo sanguineo nombre es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Factor sanguineo</mat-label>
         <mat-select formControlName="factor_sanguineo">
           <mat-select-trigger>
-            {{formControl().factor_sanguineo.value}}
+            {{formControl()['factor_sanguineo'].value}}
           </mat-select-trigger>
           <mat-option value="POSITIVO"><mat-icon>add</mat-icon>Positivo</mat-option>
           <mat-option value="NEGATIVO"><mat-icon>remove</mat-icon>Negativo</mat-option>
         </mat-select>
-        <mat-error *ngIf="this.formControl().factor_sanguineo.hasError('required')">Campo Factor sanguineo es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['factor_sanguineo'].hasError('required')">Campo Factor sanguineo es requerido.</mat-error>
       </mat-form-field>
       <div class="col-lg-3" *ngIf="_botones.botones.btnActualizar">
-        <mat-checkbox formControlName="estado">{{this.formControl().estado.value ? 'Deshabilitar registro' : ' Habilitar Registro'}}</mat-checkbox>
+        <mat-checkbox formControlName="estado">{{this.formControl()['estado'].value ? 'Deshabilitar registro' : ' Habilitar Registro'}}</mat-checkbox>
       </div>
     </form>
   </div>
 </div>
 
 <div class="contenedor-tabla" *ngIf="dataSource.data.length > 0">
-  <mat-form-field appearance="standard">
+  <mat-form-field appearance="outline">
     <mat-label>Buscar paciente</mat-label>
     <input
       matInput
