--- a/src/app/admin/parametros/vias-ingresos/vias-ingresos.component.html
+++ b/src/app/admin/parametros/vias-ingresos/vias-ingresos.component.html
@@ -58,17 +58,17 @@
           <mat-label>Nombre de la Via de Ingreso</mat-label>
           <input matInput placeholder="Escribir..." formControlName="nombre" required/>
           <mat-icon matSuffix>meeting_room</mat-icon>
-          <mat-error *ngIf="this.formControl().nombre.hasError('required')">Campo nombre es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['nombre'].hasError('required')">Campo nombre es requerido.</mat-error>
         </mat-form-field>
         <div class="col-lg-4" *ngIf="_botones.botones.btnActualizar">
-          <mat-checkbox formControlName="estado">{{this.formControl().estado.value ? 'Deshabilitar registro' : ' Registro habilitado'}}</mat-checkbox>
+          <mat-checkbox formControlName="estado">{{this.formControl()['estado'].value ? 'Deshabilitar registro' : ' Registro habilitado'}}</mat-checkbox>
         </div>
       </form>
     </div>
   </div>
   
   <div class="contenedor-tabla" *ngIf="dataSource.data.length > 0">
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="outline">
       <mat-label>Buscar via de ingreso</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filtrar" #input>
     </mat-form-field>
