--- a/src/app/administracion-centro/configuracion/centros-medicos/centros-medicos.component.html
+++ b/src/app/administracion-centro/configuracion/centros-medicos/centros-medicos.component.html
@@ -12,7 +12,7 @@
           >
         </mat-select>
         <mat-error
-          *ngIf="this.formControl().utilidad_tipo_identificacion_id.hasError('required')"
+          *ngIf="this.formControl()['utilidad_tipo_identificacion_id'].hasError('required')"
           >Campo tipo de doc. es requerido.</mat-error
         >
       </mat-form-field>
@@ -25,7 +25,7 @@
         />
         <mat-icon matSuffix>numbers</mat-icon>
         <mat-error
-          *ngIf="this.formControl().identificacion.hasError('required')"
+          *ngIf="this.formControl()['identificacion'].hasError('required')"
           >Campo numero de ident. es requerido.</mat-error
         >
       </mat-form-field>
@@ -33,39 +33,39 @@
         <mat-label>Nombre del Centro Médico</mat-label>
         <input matInput placeholder="Escribir..." formControlName="razon_social" required/>
         <mat-icon matSuffix>local_hospital</mat-icon>
-        <mat-error *ngIf="this.formControl().razon_social.hasError('required')">Campo centro médico es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['razon_social'].hasError('required')">Campo centro médico es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-12">
         <mat-label>Descripción</mat-label>
         <input matInput maxlength="200" matTooltip="Maximo 200 caracteres" placeholder="Escribir..." formControlName="descripcion" required/>
         <mat-icon matSuffix>comment</mat-icon>
-        <mat-error *ngIf="this.formControl().descripcion.hasError('required')">Campo descripción es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['descripcion'].hasError('required')">Campo descripción es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Teléfono</mat-label>
         <input matInput placeholder="Escribir..." formControlName="telefonos" required/>
         <mat-icon matSuffix>phone</mat-icon>
-        <mat-error *ngIf="this.formControl().telefonos.hasError('required')">Campo teléfono es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['telefonos'].hasError('required')">Campo teléfono es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Dirección</mat-label>
         <input matInput placeholder="Escribir..." formControlName="direccion" required/>
         <mat-icon matSuffix>fmd_good</mat-icon>
-        <mat-error *ngIf="this.formControl().direccion.hasError('required')">Campo dirección es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['direccion'].hasError('required')">Campo dirección es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Departamento</mat-label>
         <mat-select formControlName="utilidad_departamento_id" required>
           <mat-option [value]="item.id" *ngFor="let item of listadoDepartamentos">{{item.nombre}}</mat-option>
         </mat-select>
-        <mat-error *ngIf="this.formControl().utilidad_departamento_id.hasError('required')">Campo departamento es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['utilidad_departamento_id'].hasError('required')">Campo departamento es requerido.</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="col-lg-3">
         <mat-label>Ciudad</mat-label>
         <mat-select formControlName="utilidad_ciudad_id" required>
           <mat-option [value]="item.id" *ngFor="let item of listadoCiudades">{{item.nombre}}</mat-option>
         </mat-select>
-        <mat-error *ngIf="this.formControl().utilidad_ciudad_id.hasError('required')">Campo ciudad es requerido.</mat-error>
+        <mat-error *ngIf="this.formControl()['utilidad_ciudad_id'].hasError('required')">Campo ciudad es requerido.</mat-error>
       </mat-form-field>
       
       <div class="col-lg-12 mt-3">
