--- a/src/app/administracion-centro/configuracion/modal-parametros-centro/components/tipos-documentos/tipos-documentos.component.html
+++ b/src/app/administracion-centro/configuracion/modal-parametros-centro/components/tipos-documentos/tipos-documentos.component.html
@@ -57,23 +57,23 @@
           <mat-label>Nombre del Tipo de documento</mat-label>
           <input matInput placeholder="Escribir..." formControlName="nombre" required/>
           <mat-icon matSuffix>meeting_room</mat-icon>
-          <mat-error *ngIf="this.formControl().nombre.hasError('required')">Campo nombre es requerido.</mat-error>
+          <mat-error *ngIf="this.formControl()['nombre'].hasError('required')">Campo nombre es requerido.</mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="col-lg-3">
             <mat-label>Consecutivo</mat-label>
             <input matInput placeholder="Escribir..." formControlName="consecutivo" required/>
             <mat-icon matSuffix>number</mat-icon>
-            <mat-error *ngIf="this.formControl().consecutivo.hasError('required')">Campo nombre es requerido.</mat-error>
+            <mat-error *ngIf="this.formControl()['consecutivo'].hasError('required')">Campo nombre es requerido.</mat-error>
           </mat-form-field>
         <div class="col-lg-3" *ngIf="_botones.botones.btnActualizar">
-          <mat-checkbox formControlName="estado">{{this.formControl().estado.value ? 'Deshabilitar registro' : ' Registro habilitado'}}</mat-checkbox>
+          <mat-checkbox formControlName="estado">{{this.formControl()['estado'].value ? 'Deshabilitar registro' : ' Registro habilitado'}}</mat-checkbox>
         </div>
       </form>
     </div>
   </div>
   
   <div class="contenedor-tabla" *ngIf="dataSource.data.length > 0">
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="outline">
       <mat-label>Buscar Tipo de documento</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filtrar" #input>
     </mat-form-field>
