--- a/src/app/admin/movimientos/historia-clinica/historia-clinica.component.html
+++ b/src/app/admin/movimientos/historia-clinica/historia-clinica.component.html
@@ -26,7 +26,7 @@
           <mat-form-field appearance="outline" class="col-lg-3">
             <mat-label>Numero de Identificación</mat-label>
             <input
-              matInput
+              matInput readonly
               placeholder="Escribir..."
               formControlName="numero_identificacion"
             />
